--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,8 @@
 .site-navigation,
 .breadcrumbs  {
     list-style: none; 
+    margin: 0;
+    padding: 0;
 }
 .site-navigation-link {
     border-bottom: 1px solid var(--basic-link);
@@ -141,18 +143,23 @@
 }
 .user-navigation a {
     color: var(--basic-white);
-    text-decoration: none;
+    
 }
-
+.time-work {
+    grid-column: 3/4;
+}
 .time-work p {
     font-size: 14px;
     line-height: 16px;
     font-weight: bold;
+    
 }
 .number-link {
     font-size: 22px;
     line-height: 18px;
     font-weight: bold;
+    color: var(--basic-white);
+    text-decoration: none;
 
 }
 
@@ -324,11 +331,10 @@
 /*----------------footer----------
 ---------------------------------*/
 
-.footer {
+.footer .container {
     color: var(--basic-white);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 18px 0 25px;
 }
 
 .footer ul {
@@ -408,6 +414,16 @@
     line-height: 41px;
     font-weight: bold;
 }
+.filters {
+    width: 869px;
+    margin: 29px 0 40px;
+}
+.filters-form {
+    width: 869px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+}
 
 .filters legend {
     font-size: 14px;
@@ -420,11 +436,23 @@
     font-weight: 500;
 }
 
+.filter-fillers {
+    grid-column: 1/3;
+}
+
+
 /*---------------------------------------
 -----------------pagination-list-------------*/
 
 .pagination-list {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: min-content min-content min-content min-content min-content min-content min-content ;
+    justify-content: end;
+    gap: 20px;
+    margin: 80px 0 48px;
 }
 
 .pagination-item a {
