--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,15 @@
 .time-work-wrapper {
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
 }
 .time-work p {
     text-align: end;
     margin-top: 0;
     margin-bottom: 8px;
 }
+
+
 .site-navigation-link {
     border-bottom: 1px solid var(--basic-link);
     
@@ -182,6 +185,7 @@
     flex-grow: 1;
     display: flex;
     
+    
 }
 .breadcrumbs a {
     font-size: 14px;
@@ -190,6 +194,7 @@
     text-decoration: none;
     color: var(--basic-white);
     border-bottom: 1px solid var(--basic-link);
+    margin-right: 22px;
 }
 .breadcrumbs a:hover,
 .breadcrumbs a:focus,
@@ -307,6 +312,12 @@
     text-decoration: none;
     order: 1;
     text-align: center;
+}
+.seller-link {
+    color: var(--basic-white);
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 400;
 }
 .seller-item a:hover,
 .seller-item a:focus,
@@ -542,22 +553,36 @@ input[type=email] {
     font-size: 35px;
     line-height: 41px;
     font-weight: bold;
+    margin: 1px 0 29px;
 }
+
+
+/*------------------------------------------
+---------------------filters-----------------*/
 .filters {
     width: 869px;
     margin: 29px 0 40px;
 }
+.filters fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+    margin-right: 15px;
+    background-color: var(--basic-link);
+    border-radius: 20px;
+
+}
 .filters-form {
     width: 869px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 15px;
+    display: flex; 
+    flex-wrap: wrap; 
 }
 
 .filters legend {
     font-size: 14px;
     line-height: 16px;
     font-weight: 500;
+    padding-bottom: 7px;
 }
 .filters label {
     font-size: 16px;
@@ -565,9 +590,7 @@ input[type=email] {
     font-weight: 500;
 }
 
-.filter-fillers {
-    grid-column: 1/3;
-}
+
 
 
 /*---------------------------------------
@@ -577,13 +600,13 @@ input[type=email] {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    display: grid;
-    grid-template-columns: min-content min-content min-content min-content min-content min-content min-content ;
-    justify-content: end;
-    gap: 20px;
+    display: flex;
+    justify-content: flex-end;
     margin: 80px 0 48px;
 }
-
+.pagination-item {
+    margin-right: 20px;
+}
 .pagination-item a {
     text-decoration: none;
     color: var(--basic-white);
